# ezLuaEngine

./: .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  Makefile  README.md  configure  index.html  mkdocs.yml
api/: index.html
demos/pong/: index.html  page.data  page.js  page.wasm
docs/: api.md  getting-started.md  index.md
examples/hello-world/src/: main.lua
examples/opengl-simple/src/: main.lua
game-code/: main.lua  two.lua
game-files/src/: main.lua  two.lua
getting-started/: index.html
include/: engine.hpp  fetch.hpp  gfx.hpp  input.hpp  module.hpp  shader.hpp  sound.hpp
lua/: main.lua
search/: search_index.json
src/: api.cpp  api.hpp  assets.cpp  assets.hpp  engine.cpp  engine.hpp  fetch.cpp  fetch.hpp  gfx.cpp  gfx.hpp  index.html  input.cpp  luastate.js  main.cpp  shader.cpp  shader.hpp  shell.html  singletons.hpp  sound.cpp  stbi.cpp  types.hpp
src/shaders/: flat.frag  flat.vert  textured.frag  textured.vert
testgame/: main.lua
